# bugcrowd-hunter

./: .gitignore  LICENSE  README.md  __init__.py  cli.py  notifier.py  pyproject.toml  scraper.py  state.py  worker.py
bugcrowd_hunter/: cli.py  notifier.py  scanner.py  scraper.py  state.py  worker.py
bugcrowd_hunter/sample_data/: changelog.json
